--- a/sass/styles/fonts.scss
+++ b/sass/styles/fonts.scss
@@ -22,7 +22,7 @@
 
 @font-face {
     font-family: 'Rubik';
-    font-style: italic;
+    // font-style: italic;
     // font-weight: 400;
     font-display: swap;
     src: url("/dist/fonts/rubik/Rubik-VariableFont_wght.ttf") format("truetype");
