--- a/templates/components/about-card.html
+++ b/templates/components/about-card.html
@@ -16,25 +16,29 @@
             <ul>
                 <li>
                     <a class="about-quick-link" href="mailto:{{config.extra.email}}" rel="me">
-                        <img src="/dist/line-awesome/svg/envelope.svg" alt="email: " loading="lazy">
+                        <img src="https://maxst.icons8.com/vue-static/landings/line-awesome/line-awesome/1.3.0/svg/envelope.svg"
+                            alt="email: " loading="lazy">
                         {{config.extra.email}}
                     </a>
                 </li>
                 <li>
                     <a class="about-quick-link" href="https://github.com/{{config.extra.github}}" rel="me">
-                        <img src="/dist/line-awesome/svg/github.svg" alt="github: " loading="lazy">
+                        <img src="https://maxst.icons8.com/vue-static/landings/line-awesome/line-awesome/1.3.0/svg/github.svg"
+                            alt="github: " loading="lazy">
                         {{config.extra.github}}
                     </a>
                 </li>
                 <li>
                     <a class="about-quick-link" href="https://linkedin.com/in/{{config.extra.linkedin}}" rel="me">
-                        <img src="/dist/line-awesome/svg/linkedin.svg" alt="linkedin: " loading="lazy">
+                        <img src="https://maxst.icons8.com/vue-static/landings/line-awesome/line-awesome/1.3.0/svg/linkedin.svg"
+                            alt="linkedin: " loading="lazy">
                         {{config.extra.linkedin}}
                     </a>
                 </li>
                 <li>
                     <a class="about-quick-link" href="/contact">
-                        <img src="/dist/line-awesome/svg/ellipsis-h-solid.svg" alt="... " loading="lazy">
+                        <img src="https://maxst.icons8.com/vue-static/landings/line-awesome/line-awesome/1.3.0/svg/ellipsis-h-solid.svg"
+                            alt="... " loading="lazy">
                         contact me
                     </a>
                 </li>
