--- a/templates/components/site-timeline.html
+++ b/templates/components/site-timeline.html
@@ -1,7 +1,7 @@
 {% block component_styles %}
 {{ super() }}
 <link rel="stylesheet" href="/styles/components/site-timeline.css">
-<link rel="stylesheet" href="/styles/icons.css">
+<link rel="stylesheet" href="https://maxst.icons8.com/vue-static/landings/line-awesome/line-awesome/1.3.0/css/line-awesome.min.css">
 {% endblock component_styles %}
 
 {# Build a list of pages to work with #}
