--- a/templates/base.html
+++ b/templates/base.html
@@ -31,8 +31,12 @@
     <link rel="stylesheet" href="/global.css">
 
     {# Less important styles #}
-    <link rel="stylesheet" href="/dist/github-markdown-css/github-markdown-light.css" lazyload>
-    <link rel="stylesheet" href="/styles/bootstrap.css" lazyload>
+    <link rel="stylesheet"
+        href="https://cdnjs.cloudflare.com/ajax/libs/github-markdown-css/5.1.0/github-markdown-light.css"
+        integrity="sha512-1d9gwwC3dNW3O+lGwY8zTQrh08a41Ejci46DdzY1aQbqi/7Qr8Asp4ycWPsoD52tKXKrgu8h/lSpig1aAkvlMw=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" lazyload />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <link rel="stylesheet" href="/styles/typography.css">
 
     {# Component styles #}
