--- a/templates/components/footer.html
+++ b/templates/components/footer.html
@@ -5,9 +5,10 @@
 
 <div class="footer">
     <br>
-    <span class="gray">-- EOF --</span>
+    <hr>
     <p>
-        Site design & content by: <a href="/contact">Evan Pratten</a><br>
-        Consider <a href="/donate" target="_blank">supporting my work</a> if you like what you see<br>
+        <span id="copyright">Copyright &copy; Evan Warren Pratten </span>
+        <br>
+        <a href="/privacy.html">Privacy Policy</a>
     </p>
 </div>
