--- a/templates/404.html
+++ b/templates/404.html
@@ -3,6 +3,9 @@
 Not Found
 {% endblock title %}
 
+{% block page_start %}
+{% include "components/heading-card.html" %}
+{% endblock page_start %}
 {% block content %}
 <h1>404: Not Found</h1>
 <p>There is a large chance you reached this page through a <code>retrylife.ca</code> or <code>va3zza.com</code> link. I have recently changed my primary domain name to <code>ewpratten.com</code></p>
