--- a/templates/components/footer.html
+++ b/templates/components/footer.html
@@ -9,6 +9,6 @@
     <p>
         <span id="copyright">Copyright &copy; Evan Warren Pratten </span>
         <br>
-        <a href="/privacy.html">Privacy Policy</a>
+        <a href="mailto:{{config.extra.email}}">{{config.extra.email}}</a>
     </p>
 </div>
