--- a/templates/index.html
+++ b/templates/index.html
@@ -30,6 +30,7 @@
 {% if section.extra.uses %}
 {% set feature_flags = section.extra.uses %}
 {% endif %}
+{% set announcement = "Found me though the IPv6 Canvas? Click <a href='/blog/ipv6-canvas'>here</a>." %}
 {% endblock variable_wormhole %}
 
 {# Page content #}
