remove ipv6 canvas banner

--- a/templates/index.html
+++ b/templates/index.html
@@ -30,7 +30,9 @@
 {% if section.extra.uses %}
 {% set feature_flags = section.extra.uses %}
 {% endif %}
-{% set announcement = "Found me though the IPv6 Canvas? Click <a href='/blog/ipv6-canvas'>here</a>." %}
+{% if section.extra.announcement %}
+{% set announcement = section.extra.announcement %}
+{% endif %}
 {% endblock variable_wormhole %}
 
 {# Page content #}
