--- a/templates/base.html
+++ b/templates/base.html
@@ -35,7 +35,8 @@
     <link rel="stylesheet"
         href="https://cdnjs.cloudflare.com/ajax/libs/github-markdown-css/5.1.0/github-markdown-light.min.css"
         crossorigin="anonymous" referrerpolicy="no-referrer" lazyload />
-    {# <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    {#
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous"> #}
     <link rel="stylesheet" href="/styles/typography.css">
 
@@ -60,7 +61,9 @@
             {% include "components/navbar.html" %}
 
             {% if announcement %}
-             <p class="announcement">{{announcement | safe}}</p>
+            <p class="announcement">{{announcement | safe}}</p>
+            {% else %}
+            <br>
             {% endif %}
         </div>
 
@@ -84,7 +87,8 @@
     </div>
 
     {# External scripts #}
-    {# <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
+    {#
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
         crossorigin="anonymous"></script> #}
 
