--- a/templates/components/footer.html
+++ b/templates/components/footer.html
@@ -10,4 +10,9 @@
         Copyright &copy; 2017 - {{ now() | date(format="%Y") }}
         <strong>Evan Warren Pratten</strong>
     </p>
+    {# <p>
+        <a href="/press">Press Kit</a>
+        &middot;
+        <a href="/contact">Contact</a>
+    </p> #}
 </div>
