--- a/templates/components/navbar.html
+++ b/templates/components/navbar.html
@@ -5,28 +5,14 @@
 
 <div class="ewp-navbar">
     <hr>
-    {# <ul class="navbar-items">
-        <li><a href="/">Home</a></li>
-        <li class="separator">|</li>
-        <li><a href="/timeline">Timeline</a></li>
-        <li class="separator">|</li>
-        <li class="dropdown-center">
-            <a href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                More
-            </a>
-            <ul class="dropdown-menu">
-                <li><a class="dropdown-item" href="/photography">Photography</a></li>
-                <li><a class="dropdown-item" href="/contact">Contact</a></li>
-            </ul>
-        </li>
-    </ul> #}
-
     <span class="navbar-items">
         <a href="/">Home</a>
         &centerdot;
         <a href="/blog">Blog</a>
         &centerdot;
         <a href="/projects">Projects</a>
+        &centerdot;
+        <a href="/music">Music</a>
         &centerdot;
         <a href="/contact">Contact</a>
     </span>
