--- a/templates/components/navbar.html
+++ b/templates/components/navbar.html
@@ -28,6 +28,8 @@
         &centerdot;
         <a href="/projects">Projects</a>
         &centerdot;
+        <a href="/radio">Radio</a>
+        &centerdot;
         <a href="/contact">Contact</a>
     </span>
     <hr style="margin-bottom:0;">
