--- a/templates/page.html
+++ b/templates/page.html
@@ -42,9 +42,9 @@
 {% include "components/heading-card.html" %}
 {% endblock page_start %}
 {% block content %}
-<h1 style="margin-bottom:0;padding-bottom:0;">{{page.title}}</h1>
+<h1 style="margin-bottom:0;padding-bottom:0;text-align:left;">{{page.title}}</h1>
 {% if page.description %}
-<em>{{page.description}}</em>
+<em style="text-align:left;">{{page.description}}</em>
 <br>
 {% endif %}
 <br>
