Add a music page

--- a/templates/components/navbar.html
+++ b/templates/components/navbar.html
@@ -30,6 +30,8 @@
         &centerdot;
         <a href="/radio">Radio</a>
         &centerdot;
+        <a href="/music">Music</a>
+        &centerdot;
         <a href="/contact">Contact</a>
     </span>
     <hr style="margin-bottom:0;">
