--- a/templates/components/metadata/analytics.html
+++ b/templates/components/metadata/analytics.html
@@ -7,3 +7,6 @@
 
     gtag('config', 'G-5912H4H03P');
 </script>
+
+{# Experimental new analytics engine #}
+<script async defer data-website-id="c68c03ec-3ecf-48af-b7ed-7de6ce5f46b2" src="https://analytics.ewpratten.com/umami.js"></script>
