--- a/templates/base.html
+++ b/templates/base.html
@@ -100,6 +100,9 @@
         integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
         crossorigin="anonymous"></script> #}
 
+    {# Brid.gy h-card #}
+    <a href="https://ewpratten.com" class="h-card" rel="me" hidden>Evan Pratten</a>
+
     {% include "components/metadata/analytics.html" %}
 </body>
 
