--- a/templates/base.html
+++ b/templates/base.html
@@ -6,6 +6,7 @@
 {% set feature_flags = [] %}
 {% set redirect_target = "" %}
 {% set announcement = "" %}
+{% set page_path = "" %}
 {% endblock variable_wormhole %}
 
 <!DOCTYPE html>
