--- a/templates/components/metadata/analytics.html
+++ b/templates/components/metadata/analytics.html
@@ -1,3 +1,11 @@
+{# Analytics #}
+<script data-goatcounter="https://ewpratten.goatcounter.com/count"
+        async src="//gc.zgo.at/count.js"></script>
+<noscript>
+    <img src="https://ewpratten.goatcounter.com/count?p={{page_path | safe}}">
+</noscript>
+
+
 <!-- Global site tag (gtag.js) - Google Analytics -->
 <script defer src="https://www.googletagmanager.com/gtag/js?id=G-5912H4H03P"></script>
 <script>
@@ -7,6 +15,3 @@
 
     gtag('config', 'G-5912H4H03P');
 </script>
-
-{# Experimental new analytics engine #}
-<script async defer data-website-id="c68c03ec-3ecf-48af-b7ed-7de6ce5f46b2" src="https://analytics.ewpratten.com/umami.js"></script>
