--- a/templates/section.html
+++ b/templates/section.html
@@ -3,6 +3,7 @@
 {# Pass data through to the base template #}
 {% block variable_wormhole %}
 {{ super() }}
+{% set page_path = section.path %}
 {% set title = section.title %}
 {% set description = section.description %}
 {% if section.extra.uses %}
