Store icons locally

--- a/templates/page.html
+++ b/templates/page.html
@@ -58,17 +58,17 @@
 {% if page.extra.discuss %}
 <div class="left-box">
     <a href="{{page.extra.discuss.reddit}}" target="_blank">
-        <img src="https://maxst.icons8.com/vue-static/landings/line-awesome/line-awesome/1.3.0/svg/reddit-alien.svg"
+        <img src="/dist/line-awesome/reddit.svg"
             alt="View on Reddit" loading="lazy">
     </a>
     {% if page.extra.discuss.hacker_news %}
     <a href="{{page.extra.discuss.hacker_news}}" target="_blank">
-        <img src="https://maxst.icons8.com/vue-static/landings/line-awesome/line-awesome/1.3.0/svg/hacker-news.svg"
+        <img src="/dist/line-awesome/hacker-news.svg"
             alt="View on Hacker News" loading="lazy">
     </a>
     {% endif %}
     <a href="mailto:comment@ewpratten.com?subject=Comment: {{page.title}}" target="_blank">
-        <img src="https://maxst.icons8.com/vue-static/landings/line-awesome/line-awesome/1.3.0/svg/envelope.svg"
+        <img src="/dist/line-awesome/envelope.svg"
             alt="Comment via Email" loading="lazy">
     </a>
 </div>
