--- a/templates/components/about-card.html
+++ b/templates/components/about-card.html
@@ -16,33 +16,32 @@
             <ul>
                 <li>
                     <a target="_blank" class="about-quick-link" href="mailto:{{config.extra.email}}" rel="me">
-                        <img src="https://maxst.icons8.com/vue-static/landings/line-awesome/line-awesome/1.3.0/svg/envelope.svg"
-                            alt="email: " loading="lazy">
+                        <img src="/dist/line-awesome/envelope.svg" alt="email: " loading="lazy">
                         {{config.extra.email}}
                     </a>
                 </li>
                 <li>
-                    <a target="_blank" class="about-quick-link" href="https://github.com/{{config.extra.github}}" rel="me">
-                        <img src="https://maxst.icons8.com/vue-static/landings/line-awesome/line-awesome/1.3.0/svg/github.svg"
-                            alt="github: " loading="lazy">
+                    <a target="_blank" class="about-quick-link" href="https://github.com/{{config.extra.github}}"
+                        rel="me">
+                        <img src="/dist/line-awesome/github.svg" alt="github: " loading="lazy">
                         {{config.extra.github}}
                     </a>
                 </li>
                 <li>
-                    <a target="_blank" class="about-quick-link" href="https://linkedin.com/in/{{config.extra.linkedin}}" rel="me">
-                        <img src="https://maxst.icons8.com/vue-static/landings/line-awesome/line-awesome/1.3.0/svg/linkedin.svg"
-                            alt="linkedin: " loading="lazy">
+                    <a target="_blank" class="about-quick-link" href="https://linkedin.com/in/{{config.extra.linkedin}}"
+                        rel="me">
+                        <img src="/dist/line-awesome/linkedin.svg" alt="linkedin: " loading="lazy">
                         {{config.extra.linkedin}}
                     </a>
                 </li>
                 <li>
-                    <a target="_blank" class="about-quick-link" href="https://social.ewpratten.com/{{config.extra.mastodon}}" rel="me">
-                        <img src="https://maxst.icons8.com/vue-static/landings/line-awesome/line-awesome/1.3.0/svg/mastodon.svg"
-                            alt="linkedin: " loading="lazy">
+                    <a target="_blank" class="about-quick-link"
+                        href="https://social.ewpratten.com/{{config.extra.mastodon}}" rel="me">
+                        <img src="/dist/line-awesome/mastodon.svg" alt="linkedin: " loading="lazy">
                         {{config.extra.mastodon}}
                     </a>
                 </li>
-                
+
                 {# <li>
                     <a class="about-quick-link" href="/contact">
                         <img src="https://maxst.icons8.com/vue-static/landings/line-awesome/line-awesome/1.3.0/svg/ellipsis-h-solid.svg"
