--- a/templates/components/navbar.html
+++ b/templates/components/navbar.html
@@ -25,8 +25,10 @@
         <a href="/">Home</a>
         &centerdot;
         <a href="/blog">Blog</a>
+        {# &centerdot;
+        <a href="/projects">Projects</a> #}
         &centerdot;
-        <a href="/projects">Projects</a>
+        <a href="/software">Software</a>
         &centerdot;
         <a href="/radio">Radio</a>
         &centerdot;
