--- a/templates/404.html
+++ b/templates/404.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
-{% block title %}
-Not Found
-{% endblock title %}
+{% block variable_wormhole %}
+{% set title = "Not Found" %}
+{% endblock variable_wormhole %}
 
 {% block page_start %}
 {% include "components/heading-card.html" %}
