Fix missing description bug

--- a/templates/404.html
+++ b/templates/404.html
@@ -1,5 +1,6 @@
 {% extends "base.html" %}
 {% block variable_wormhole %}
+{{ super() }}
 {% set title = "Not Found" %}
 {% endblock variable_wormhole %}
 
