Revert to client-side tracking

--- a/templates/components/metadata/analytics.html
+++ b/templates/components/metadata/analytics.html
@@ -1,4 +1,6 @@
-<!-- Global site tag (gtag.js) - Google Analytics -->
+<script data-goatcounter="https://ewpratten.goatcounter.com/count"
+        async src="//gc.zgo.at/count.js"></script>
+
 <script defer src="https://www.googletagmanager.com/gtag/js?id=G-5912H4H03P"></script>
 <script>
     window.dataLayer = window.dataLayer || [];
