--- a/sass/styles/typography.scss
+++ b/sass/styles/typography.scss
@@ -60,3 +60,10 @@ body {
 .monospace {
   font-variant-numeric: tabular-nums;
 }
+
+#sponsor-notice{
+  background-color: rgb(253, 204, 173);
+  width:max-content;
+  margin:auto;
+  padding: 5px;
+}
