custom home title

--- a/templates/base.html
+++ b/templates/base.html
@@ -27,7 +27,9 @@
     {% endif %}
 
     {# Page title #}
+    {% block title %}
     <title>{{title}} | {{config.title}}</title>
+    {% endblock title %}
 
     {# Site-wide styles #}
     <link rel="stylesheet" href="/global.css">
