--- a/templates/components/footer.html
+++ b/templates/components/footer.html
@@ -1,4 +1,4 @@
-{% block component_styles %}
+{# {% block component_styles %}
 {{ super() }}
 <link rel="stylesheet" href="/styles/components/footer.css">
 {% endblock component_styles %}
@@ -16,10 +16,5 @@
         Copyright &copy; 2017 - {{ now() | date(format="%Y") }}
         <strong>Evan Warren Pratten</strong>
     </p>
-    {# <p>
-        <a href="/press">Press Kit</a>
-        &middot;
-        <a href="/contact">Contact</a>
-    </p> #}
     <br>
-</div>
+</div> #}
