--- a/sass/styles/typography.scss
+++ b/sass/styles/typography.scss
@@ -15,6 +15,8 @@
 //   font-family: "Rubik", sans-serif;
 //   font-weight: normal;
 // }
+
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,300;0,400;0,700;0,800;1,400;1,700;1,800&display=swap');
 a {
   text-decoration: none;
   color: blue !important;
@@ -30,7 +32,8 @@ a {
 
 body {
   margin: 0;
-  font-family: serif;
+  // font-family: serif;
+  font-family: 'Poppins', sans-serif;
   text-align: justify;
 }
 
