Only show sponsor banner on posts

--- a/templates/base.html
+++ b/templates/base.html
@@ -3,6 +3,7 @@
 {% set title = "NO TITLE SET" %}
 {% set description = "" %}
 {% set is_article = false %}
+{% set is_post = false %}
 {% set feature_flags = [] %}
 {% set redirect_target = "" %}
 {% set announcement = "" %}
