--- a/templates/components/footer.html
+++ b/templates/components/footer.html
@@ -5,7 +5,7 @@
 
 <div class="footer container">
 
-    {% if is_article %}
+    {% if is_post %}
     <br>
     <p id="sponsor-notice">Consider <a href="https://ewp.fyi/sponsor">sponsoring my work</a>!</p>
     {% endif %}
