Fix some HTML format bugs

--- a/templates/base.html
+++ b/templates/base.html
@@ -18,13 +18,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" type="image/jpg" href="{{config.extra.profile_photo}}" />
+    <link rel="shortcut icon" type="image/jpg" href="{{config.extra.profile_photo | safe}}" />
     {% include "components/metadata/advertise-rss.html" %}
     {% include "components/metadata/opengraph.html" %}
 
     {# Redirect support #}
     {% if redirect_target != "" %}
-    <meta http-equiv="refresh" content="0; url={{redirect_target}}" />
+    <meta http-equiv="refresh" content="0; url={{redirect_target | safe}}" />
     {% endif %}
 
     {# Page title #}
