--- a/templates/components/metadata/advertise-rss.html
+++ b/templates/components/metadata/advertise-rss.html
@@ -1,5 +1,5 @@
 {% if current_url %}
-<link rel="canonical" href="{{current_url}}" />
+<link rel="canonical" href="{{current_url | safe}}" />
 {% endif %}
 
-<link rel="alternate" type="application/rss+xml" title="RSS" href="{{get_url(path=config.feed_filename, trailing_slash=false)}}">
+<link rel="alternate" type="application/rss+xml" title="RSS" href="{{get_url(path=config.feed_filename, trailing_slash=false) | safe}}">
