Change analytics uri

--- a/templates/components/metadata/analytics.html
+++ b/templates/components/metadata/analytics.html
@@ -1,4 +1,4 @@
-<script data-goatcounter="https://ewpratten.goatcounter.com/count"
+<script data-goatcounter="https://analytics.ewpratten.com/count"
         async src="//gc.zgo.at/count.js"></script>
 
 <script defer src="https://www.googletagmanager.com/gtag/js?id=G-5912H4H03P"></script>
