--- a/sass/styles/layout.scss
+++ b/sass/styles/layout.scss
@@ -62,3 +62,20 @@
     max-width: unset !important;
   }
 }
+
+.card {
+  border: 1px solid rgb(194, 194, 194);
+  border-radius: 5px;
+  padding-left: 1em;
+  padding-right: 1em;
+  margin-top: 1em;
+  margin-bottom: 1em;
+
+  h3 {
+    margin-top: 16px !important;
+  }
+}
+
+.card.card-dropshadow {
+  box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.2);
+}
