--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -73,6 +73,7 @@ main {
   @import "elements/table.scss";
   @import "elements/text.scss";
   @import "elements/image.scss";
+  @import "elements/details.scss";
 }
 
 footer {
