Add new music pages

--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -74,6 +74,7 @@ main {
   @import "elements/text.scss";
   @import "elements/image.scss";
   @import "elements/details.scss";
+  @import "elements/music-info-card.scss";
 }
 
 footer {
