Add photography section

--- a/templates/base.html
+++ b/templates/base.html
@@ -108,6 +108,7 @@
             <li><a href="/blog">Blog</a></li>
             <li><a href="/radio">Radio</a></li>
             <li><a href="/music">Music</a></li>
+            <li><a href="/photos">Photos</a></li>
             <li><a href="/contact">Contact</a></li>
         </ul>
         <hr>
