--- a/sass/elements/list.scss
+++ b/sass/elements/list.scss
@@ -7,11 +7,11 @@ ul {
   ul {
     margin-top: 0;
     margin-bottom: 0;
-    list-style-type: lower-roman;
-    ol,
-    ul {
-      list-style-type: lower-alpha;
-    }
+    // list-style-type: lower-roman;
+    // ol,
+    // ul {
+    //   list-style-type: lower-alpha;
+    // }
   }
 }
 
